feat: Enhance notification button with MatMenuTrigger for improved menu handling

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -87,7 +87,8 @@
     </button>
     }
     @if (app.authenticated()) {
-    <button class="notification-toolbar" mat-icon-button [matMenuTriggerFor]="menuNotifications">
+    <button class="notification-toolbar" mat-icon-button [matMenuTriggerFor]="menuNotifications"
+      #notificationMenuTrigger="matMenuTrigger">
       <mat-icon [class.pulsing-icon]="hasActivePendingNotifications()"
         [matBadge]="unreadNotificationsCount() > 0 ? unreadNotificationsCount() : null">notifications</mat-icon>
     </button>
