--- a/src/app/pages/notifications/notifications.component.scss
+++ b/src/app/pages/notifications/notifications.component.scss
@@ -239,10 +239,13 @@
       }
 
       @keyframes pulse-glow {
-        0%, 100% {
+
+        0%,
+        100% {
           opacity: 1;
           transform: scale(1);
         }
+
         50% {
           opacity: 0.9;
           transform: scale(1.05);
