feat: Enhance timeline content expander with intelligent truncation and overflow detection for improved user experience

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -82,7 +82,7 @@
       <h4 class="thread-label">Original Post</h4>
       <mat-card appearance="outlined" class="root-event">
         <app-event-header [event]="rootRecordData.event"></app-event-header>
-        <mat-card-content [class.collapsed]="!isRootEventExpanded()">
+        <mat-card-content #rootContent [class.collapsed]="!isRootEventExpanded()">
           @if (rootRecordData.event.kind === 20) {
           <app-photo-event [event]="rootRecordData.event"></app-photo-event>
           }
@@ -109,12 +109,12 @@
           <app-content [content]="rootRecordData.data" [event]="rootRecordData.event"></app-content>
           }
         </mat-card-content>
-        @if (!isRootEventExpanded()) {
+        @if (!isRootEventExpanded() && rootContentNeedsTruncation()) {
         <button mat-button class="show-more-btn" (click)="isRootEventExpanded.set(true)">
           <mat-icon>expand_more</mat-icon>
           Show more
         </button>
-        } @else {
+        } @else if (isRootEventExpanded()) {
         <button mat-button class="show-less-btn" (click)="isRootEventExpanded.set(false)">
           <mat-icon>expand_less</mat-icon>
           Show less
@@ -139,7 +139,7 @@
       }
       <mat-card appearance="outlined" class="parent-event">
         <app-event-header [event]="parentRecordData.event"></app-event-header>
-        <mat-card-content [class.collapsed]="!isParentEventExpanded()">
+        <mat-card-content #parentContent [class.collapsed]="!isParentEventExpanded()">
           @if (parentRecordData.event.kind === 20) {
           <app-photo-event [event]="parentRecordData.event"></app-photo-event>
           }
@@ -168,12 +168,12 @@
           <app-content [content]="parentRecordData.data" [event]="parentRecordData.event"></app-content>
           }
         </mat-card-content>
-        @if (!isParentEventExpanded()) {
+        @if (!isParentEventExpanded() && parentContentNeedsTruncation()) {
         <button mat-button class="show-more-btn" (click)="isParentEventExpanded.set(true)">
           <mat-icon>expand_more</mat-icon>
           Show more
         </button>
-        } @else {
+        } @else if (isParentEventExpanded()) {
         <button mat-button class="show-less-btn" (click)="isParentEventExpanded.set(false)">
           <mat-icon>expand_less</mat-icon>
           Show less
