feat: Implement virtual scrolling for notifications to enhance performance and reduce memory usage

--- a/src/app/pages/notifications/notifications.component.scss
+++ b/src/app/pages/notifications/notifications.component.scss
@@ -149,6 +149,16 @@
 }
 
 // Notification list
+.notification-viewport {
+  height: calc(100vh - 320px); // Account for header, tabs, and padding
+  min-height: 400px;
+  width: 100%;
+
+  ::ng-deep .cdk-virtual-scroll-content-wrapper {
+    width: 100%;
+  }
+}
+
 .notification-list {
   display: flex;
   flex-direction: column;
