--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -68,10 +68,10 @@
           <p>You'll see mentions, follows, reposts, and other interactions here.</p>
         </div>
         } @else {
-        <div class="notification-list">
-          @for (notification of contentNotifications(); track notification.id) {
-          <div class="notification-item" [class.unread]="!notification.read"
-            [class.clickable]="getEventId(notification)" [attr.data-notification-type]="notification.type">
+        <cdk-virtual-scroll-viewport [itemSize]="150" class="notification-viewport">
+          <div *cdkVirtualFor="let notification of contentNotifications(); trackBy: trackByNotificationId"
+            class="notification-item" [class.unread]="!notification.read" [class.clickable]="getEventId(notification)"
+            [attr.data-notification-type]="notification.type">
             <div class="notification-icon-wrapper" [attr.data-icon-type]="notification.type">
               <mat-icon class="notification-icon">{{ getNotificationTypeIcon(notification.type) }}</mat-icon>
             </div>
@@ -118,8 +118,7 @@
               </button>
             </div>
           </div>
-          }
-        </div>
+        </cdk-virtual-scroll-viewport>
         }
       </mat-tab>
 
@@ -139,9 +138,9 @@
           <p>Technical notifications and system messages will appear here.</p>
         </div>
         } @else {
-        <div class="notification-list">
-          @for (notification of systemNotifications(); track notification.id) {
-          <div class="notification-item" [class.unread]="!notification.read">
+        <cdk-virtual-scroll-viewport [itemSize]="150" class="notification-viewport">
+          <div *cdkVirtualFor="let notification of systemNotifications(); trackBy: trackByNotificationId"
+            class="notification-item" [class.unread]="!notification.read">
             <div class="notification-icon-wrapper">
               <mat-icon class="notification-bell">notifications</mat-icon>
             </div>
@@ -184,8 +183,7 @@
               </button>
             </div>
           </div>
-          }
-        </div>
+        </cdk-virtual-scroll-viewport>
         }
       </mat-tab>
     </mat-tab-group>
