--- a/src/app/components/event-types/article-event.component.html
+++ b/src/app/components/event-types/article-event.component.html
@@ -52,7 +52,7 @@
       }
     </div>
     } @else {
-    <div class="markdown-content" [innerHTML]="contentToShow()"></div>
+    <div class="markdown-content" [innerHTML]="contentToShow()" appMentionHover></div>
     }
   </div>
 
