--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -97,7 +97,7 @@
       }
     </div>
     } @else {
-    <div class="markdown-content" [innerHTML]="parsedContent()"></div>
+    <div class="markdown-content" [innerHTML]="parsedContent()" appMentionHover></div>
     }
   </main>
 
